--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 
   <head>
+    <meta name="google-site-verification" content="R1SuSTjnrHblVxGAmR7qTSHVhzm9ALHr8aPpFWmOkI0" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <base target="_blank">
