--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <base target="_blank">
 
     <title>Felipe Vieira</title>
+    <meta name="author" content="Felipe Vieira">
+    <meta http-equiv="content-language" content="pt-br" />
 
     <link rel="stylesheet" href="vendor/foundation/css/foundation.css">
     <link rel="stylesheet" href="vendor/foundation-icons/foundation-icons.css">
@@ -18,7 +20,7 @@
     <script src="vendor/foundation/js/vendor/custom.modernizr.js"></script>
 
   </head>
-  <body>
+  <body itemscope itemtype="http://schema.org/Person">
 
     <div class="row">
       <div class="large-12 columns">
@@ -34,7 +36,7 @@
             <ul class="right">
               <li>
                 <h3>
-                  <a href="tel:1992099316">
+                  <a href="tel:1992099316" itemprop="telephone">
                     <i class="fi-telephone"></i> (19) 99209-9316
                   </a>
                 </h3>
@@ -50,7 +52,7 @@
               <li class="divider"></li>
               <li>
                 <h3>
-                  <a href="mailto:nvieirafelipe@gmail.com">
+                  <a href="mailto:nvieirafelipe@gmail.com" itemprop="email">
                     <i class="fi-mail"></i> nvieirafelipe@gmail.com
                   </a>
                 </h3>
@@ -75,13 +77,13 @@
           </section>
         </nav>
 
-        <h1>Felipe Vieira</h1>
-        <h3>Desenvolvedor de Software - Campinas, SP.</h3>
+        <h1 itemprop="name">Felipe Vieira</h1>
+        <h3><span itemprop="jobTitle">Desenvolvedor de Software</span> - <span itemprop="homeLocation">Campinas, SP.</span></h3>
 
         <div class="hide-for-small show-on-print">
           <ul id="contact">
             <li>
-              <a href="tel:1992099316">
+              <a href="tel:1992099316" itemprop="telephone">
                 <i class="fi-telephone step size-36"></i> (19) 99209-9316
               </a>
             </li>
@@ -91,7 +93,7 @@
               </a>
             </li>
             <li>
-              <a href="mailto:nvieirafelipe@gmail.com">
+              <a href="mailto:nvieirafelipe@gmail.com" itemprop="email">
                 <i class="fi-mail"></i> nvieirafelipe@gmail.com
               </a>
             </li>
@@ -123,7 +125,7 @@
                   <a href="http://www.pinutsstudios.com.br/">Pinuts Studios</a>
                 </dt>
                 <dd>
-                  <strong>Desenvolvedor</strong><br />
+                  <strong itemprop="jobTitle">Desenvolvedor</strong><br />
                   desde 15/10/2011<br />
                   Desenvolvimento de aplicações mobiles para plataformas iOS e Android, desenvolvimento de RESTful web APIs.
                   <hr />
@@ -158,7 +160,7 @@
                   <a href="http://fecamp.org.br/">FECAMP</a>
                 </dt>
                 <dd>
-                  <strong>Estagiário</strong><br />
+                  <strong itemprop="jobTitle">Estagiário</strong><br />
                   10/01/2011 a 15/10/2011<br />
                   <strong>Freela</strong><br />
                   desde 01/03/2012<br />
@@ -186,7 +188,7 @@
                   <a href="http://medic-agenda.herokuapp.com">Medic Agenda</a>
                 </dt>
                 <dd>
-                  <strong>Freela</strong><br />
+                  <strong itemprop="jobTitle">Freela</strong><br />
                   desde 15/08/2013<br />
                   Análise e desenvolvimento de plataforma para agendamento de consultas online.
                   <hr />
@@ -213,7 +215,7 @@
                     <a href="http://www.digitalset.com.br/">Digitalset</a>
                   </dt>
                   <dd>
-                    <strong>Auxiliar técnico</strong><br />
+                    <strong itemprop="jobTitle">Auxiliar técnico</strong><br />
                     18/12/2008 a 31/10/2009<br />
                     Suporte a clientes de sistema<br />
                     Manutenção de Banco de Dados.<br />
@@ -236,7 +238,7 @@
           <div class="large-12 columns">
             <div class="panel text-center">
               <dl>
-                <dt>PUC Campinas</dt>
+                <dt itemprop="alumniOf">PUC Campinas</dt>
                 <dd>
                   <p>
                     Sistemas de Informação (Análise de Sistemas)<br />
@@ -248,7 +250,7 @@
                     Software para Gestao de Transporte de Passageiro</br>
                     <div class="hide-on-print">
                       <a href="http://graviola-project.gopagoda.com/">
-                        <image src="http://graviola-project.gopagoda.com/images/logo130x140.png" />
+                        <image src="images/nojam.png" />
                       </a> <br />
                       <strong>username:</strong> site_admin <br />
                       <strong>password:</strong> admin
@@ -270,7 +272,7 @@
           <div class="large-12 columns">
             <div class="panel text-center">
               <dl>
-                <dt>People</dt>
+                <dt itemprop="alumniOf">People</dt>
                 <dd>
                   <p>
                     Técnico em Informática<br />
