--- a/index.html
+++ b/index.html
@@ -122,12 +122,39 @@
             <div class="panel">
               <dl>
                 <dt>
+                  <a href="http://www.everywhere.com.br">Everywhere</a>
+                </dt>
+                <dd>
+                  <strong itemprop="jobTitle">Desenvolvedor</strong><br />
+                  desde 05/01/2014<br />
+                  Desenvolvimento de aplicativos móveis com HTML5 e JS, desenvolvimento de aplicações web e APIs.
+                  <hr />
+                  <span class="round label">Cordova (PhoneGap)</span>
+                  <span class="round label">Angular JS</span>
+                  <span class="round label">PHP</span>
+                  <span class="round label">Slim Framework</span>
+                  <span class="round label">PHP Unit</span>
+                  <span class="round label">Ruby</span>
+                  <span class="round label">Rails</span>
+                  <span class="round label">Rspec</span>
+                  <span class="round label">Cucumber</span>
+                </dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+
+        <div class="row page-break-after">
+          <div class="large-12 columns">
+            <div class="panel">
+              <dl>
+                <dt>
                   <a href="http://www.pinutsstudios.com.br/">Pinuts Studios</a>
                 </dt>
                 <dd>
                   <strong itemprop="jobTitle">Desenvolvedor</strong><br />
-                  desde 15/10/2011<br />
-                  Desenvolvimento de aplicações mobiles para plataformas iOS e Android, desenvolvimento de RESTful web APIs.
+                  15/10/2011 a 15/12/2013<br />
+                  Desenvolvimento de aplicações para plataformas iOS e Android, desenvolvimento de RESTful web APIs.
                   <hr />
                   <span class="round label">Git</span>
                   <span class="round label">Ruby</span>
