--- a/index.html
+++ b/index.html
@@ -1,341 +1,13 @@
-<!DOCTYPE html>
-  <!--[if IE 8]> <html class="no-js lt-ie9" lang="en" > <![endif]-->
-  <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
+---
+layout: default
+title: Felipe Vieira
+---
 
-  <head>
-    <meta name="google-site-verification" content="R1SuSTjnrHblVxGAmR7qTSHVhzm9ALHr8aPpFWmOkI0" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <base target="_blank">
-
-    <title>Felipe Vieira</title>
-    <meta name="author" content="Felipe Vieira">
-    <meta http-equiv="content-language" content="pt-br" />
-
-    <link rel="stylesheet" href="vendor/foundation/css/foundation.css">
-    <link rel="stylesheet" href="vendor/foundation-icons/foundation-icons.css">
-    <link rel="stylesheet" href="nvieirafelipe.css">
-    <link rel="stylesheet" media="print" href="print.css">
-
-    <script src="vendor/foundation/js/vendor/custom.modernizr.js"></script>
-
-  </head>
-  <body itemscope itemtype="http://schema.org/Person">
-
-    <div class="row">
-      <div class="large-12 columns">
-        <nav class="top-bar show-for-small hide-on-print" data-options="is_hover:false">
-          <ul class="title-area">
-            <li class="left toggle-topbar menu-icon"><a href="#"><span /></a></li>
-            <li class="name">
-              <h1><a>Contato</a></h1>
-            </li>
-          </ul>
-
-          <section class="top-bar-section text-center">
-            <ul class="right">
-              <li>
-                <h3>
-                  <a href="tel:1992099316" itemprop="telephone">
-                    <i class="fi-telephone"></i> (19) 99209-9316
-                  </a>
-                </h3>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <h3>
-                  <a href="facetime:nvieirafelipe@gmail.com">
-                    <i class="fi-social-apple"></i> nvieirafelipe@me.com
-                  </a>
-                </h3>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <h3>
-                  <a href="mailto:nvieirafelipe@gmail.com" itemprop="email">
-                    <i class="fi-mail"></i> nvieirafelipe@gmail.com
-                  </a>
-                </h3>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <h3>
-                  <a href="http://github.com/nvieirafelipe">
-                    <i class="fi-social-github"></i> github.com/nvieirafelipe
-                  </a>
-                </h3>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <h3>
-                  <a href="http://twitter.com/nvieirafelipe">
-                    <i class="fi-social-twitter"></i> twitter.com/nvieirafelipe
-                  </a>
-                </h3>
-              </li>
-            </ul>
-          </section>
-        </nav>
-
-        <h1 itemprop="name">Felipe Vieira</h1>
-        <h3><span itemprop="jobTitle">Desenvolvedor de Software</span> - <span itemprop="homeLocation">Campinas, SP.</span></h3>
-
-        <div class="hide-for-small show-on-print">
-          <ul id="contact">
-            <li>
-              <a href="tel:1992099316" itemprop="telephone">
-                <i class="fi-telephone step size-36"></i> (19) 99209-9316
-              </a>
-            </li>
-            <li>
-              <a href="facetime:nvieirafelipe@gmail.com">
-                <i class="fi-social-apple"></i> nvieirafelipe@me.com
-              </a>
-            </li>
-            <li>
-              <a href="mailto:nvieirafelipe@gmail.com" itemprop="email">
-                <i class="fi-mail"></i> nvieirafelipe@gmail.com
-              </a>
-            </li>
-            <li>
-              <a href="http://github.com/nvieirafelipe">
-                <i class="fi-social-github"></i> github.com/nvieirafelipe
-              </a>
-            </li>
-            <li>
-              <a href="http://twitter.com/nvieirafelipe">
-                <i class="fi-social-twitter"></i> twitter.com/nvieirafelipe
-              </a>
-            </li>
-          </ul>
-        </div>
-        <hr />
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="large-8 columns">
-        <h2>Experiência Profissional</h2>
-
-        <div class="row page-break-after">
-          <div class="large-12 columns">
-            <div class="panel">
-              <dl>
-                <dt>
-                  <a href="http://www.everywhere.com.br">Everywhere</a>
-                </dt>
-                <dd>
-                  <strong itemprop="jobTitle">Desenvolvedor</strong><br />
-                  desde 05/01/2014<br />
-                  Desenvolvimento de aplicativos móveis com HTML5 e JS, desenvolvimento de aplicações web e APIs.
-                  <hr />
-                  <span class="round label">Cordova (PhoneGap)</span>
-                  <span class="round label">Angular JS</span>
-                  <span class="round label">PHP</span>
-                  <span class="round label">Slim Framework</span>
-                  <span class="round label">PHP Unit</span>
-                  <span class="round label">Ruby</span>
-                  <span class="round label">Rails</span>
-                  <span class="round label">Rspec</span>
-                  <span class="round label">Cucumber</span>
-                </dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <div class="row page-break-after">
-          <div class="large-12 columns">
-            <div class="panel">
-              <dl>
-                <dt>
-                  <a href="http://www.pinutsstudios.com.br/">Pinuts Studios</a>
-                </dt>
-                <dd>
-                  <strong itemprop="jobTitle">Desenvolvedor</strong><br />
-                  15/10/2011 a 15/12/2013<br />
-                  Desenvolvimento de aplicações para plataformas iOS e Android, desenvolvimento de RESTful web APIs.
-                  <hr />
-                  <span class="round label">Git</span>
-                  <span class="round label">Ruby</span>
-                  <span class="round label">Rails</span>
-                  <span class="round label">Sinatra</span>
-                  <span class="round label">Grape</span>
-                  <span class="round label">Rspec</span>
-                  <span class="round label">Cucumber</span>
-                  <span class="round label">PostgreSQL</span>
-                  <span class="round label">Objective-C</span>
-                  <span class="round label">iOS</span>
-                  <span class="round label">Cocoapods</span>
-                  <span class="round label">Kiwi</span>
-                  <span class="round label">Java</span>
-                  <span class="round label">Android</span>
-                  <span class="round label">BDD</span>
-                  <span class="round label">TDD</span>
-                  <span class="round label">Pair programming</span>
-                </dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="large-6 columns">
-            <div class="panel">
-              <dl>
-                <dt>
-                  <a href="http://fecamp.org.br/">FECAMP</a>
-                </dt>
-                <dd>
-                  <strong itemprop="jobTitle">Estagiário</strong><br />
-                  10/01/2011 a 15/10/2011<br />
-                  <strong>Freela</strong><br />
-                  desde 01/03/2012<br />
-                  Análise e desenvolvimento de aplicação web para apoio à pesquisa de atualização
-                  da nova base de cálculo de ITBI da Prefeitura de Campinas.
-                  <hr />
-                  <span class="round label">Git</span>
-                  <span class="round label">PHP</span>
-                  <span class="round label">MySQL</span>
-                  <span class="round label">Symfony 1.4</span>
-                  <span class="round label">Javascript</span>
-                  <span class="round label">jQuery</span>
-                  <span class="round label">Google Maps API</span>
-                  <span class="round label">Google Visualization API</span>
-                  <span class="round label">HTML + CSS</span>
-                </dd>
-              </dl>
-            </div>
-          </div>
-
-          <div class="large-6 columns">
-            <div class="panel">
-              <dl>
-                <dt>
-                  <a href="http://medic-agenda.herokuapp.com">Medic Agenda</a>
-                </dt>
-                <dd>
-                  <strong itemprop="jobTitle">Freela</strong><br />
-                  desde 15/08/2013<br />
-                  Análise e desenvolvimento de plataforma para agendamento de consultas online.
-                  <hr />
-                  <span class="round label">Git</span>
-                  <span class="round label">Ruby</span>
-                  <span class="round label">Rails 3.2</span>
-                  <span class="round label">PostgreSQL</span>
-                  <span class="round label">Heroku</span>
-                  <span class="round label">AWS</span>
-                  <span class="round label">Javascript</span>
-                  <span class="round label">jQuery</span>
-                  <span class="round label">Google Maps API</span>
-                  <span class="round label">HTML + CSS</span>
-                </dd>
-              </dl>
-            </div>
-          </div>
-
-
-          <div class="large-6 columns">
-              <div class="panel">
-                <dl>
-                  <dt>
-                    <a href="http://www.digitalset.com.br/">Digitalset</a>
-                  </dt>
-                  <dd>
-                    <strong itemprop="jobTitle">Auxiliar técnico</strong><br />
-                    18/12/2008 a 31/10/2009<br />
-                    Suporte a clientes de sistema<br />
-                    Manutenção de Banco de Dados.<br />
-                    Desenvolvimento de novas funcionalidades.<br />
-                    <hr />
-                    <span class="round label">ERP</span>
-                    <span class="round label">MS SQL Server</span>
-                    <span class="round label">Delphi</span>
-                  </dd>
-                </dl>
-              </div>
-            </a>
-          </div>
-        </div>
-        <hr />
-
-        <h2>Formação Acadêmica</h2>
-
-        <div class="row">
-          <div class="large-12 columns">
-            <div class="panel text-center">
-              <dl>
-                <dt itemprop="alumniOf">PUC Campinas</dt>
-                <dd>
-                  <p>
-                    Sistemas de Informação (Análise de Sistemas)<br />
-                    8 Semestres<br />
-                    01/2008 à 12/2011<br />
-                  </p>
-                  <p>
-                    <strong>Projeto Final:</strong><br />
-                    Software para Gestao de Transporte de Passageiro</br>
-                    <div class="hide-on-print">
-                      <a href="http://graviola-project.gopagoda.com/">
-                        <image src="images/nojam.png" />
-                      </a> <br />
-                      <strong>username:</strong> site_admin <br />
-                      <strong>password:</strong> admin
-                    </div>
-                    <hr />
-                    <span class="round label">HTML + CSS</span>
-                    <span class="round label">Symphony 1.4</span>
-                    <span class="round label">PHP</span>
-                    <span class="round label">MySQL</span>
-                    <span class="round label">SVN</span>
-                  </p>
-                </dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="large-12 columns">
-            <div class="panel text-center">
-              <dl>
-                <dt itemprop="alumniOf">People</dt>
-                <dd>
-                  <p>
-                    Técnico em Informática<br />
-                    4 Semestres<br />
-                    03/2007 à 03/2009<br />
-                  </p>
-                  <hr />
-                  <span class="round label">Visual Basic.NET</span>
-                  <span class="round label">ASP.NET</span>
-                  <span class="round label">HTML + CSS</span>
-                  <span class="round label">Javascript</span>
-                </dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="large-4 columns">
-        <h4>Idiomas</h4>
-        <p>Inglês intermediário.</p>
-      </div>
-    </div>
-
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-
-    <script>
-      document.write('<script src=' +
-      ('__proto__' in {} ? 'vendor/foundation/js/vendor/zepto' : 'vendor/foundation/js/vendor/jquery') +
-      '.js><\/script>')
-    </script>
-
-    <script src="vendor/foundation/js/foundation.min.js"></script>
-
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
-</html>
+{% include menu.html %}
+<div class="row small-up-1 medium-up-2 large-up-3 home">
+  <ol class="posts">
+    {% for post in site.posts %}
+      {% include_relative index/post.html %}
+    {% endfor %}
+  </ol>
+</div>
