--- a/about/academic/people.html
+++ b/about/academic/people.html
@@ -1,4 +1,4 @@
-<div class='large-11 columns'>
+<div class='columns large-11 academic'>
   <div class='panel text-center'>
     <dl>
       <dt itemprop='alumniOf'>People</dt>
@@ -13,10 +13,10 @@
         </p>
         <hr>
         <div class="text-center">
-          <span class='radius label'>Visual Basic.NET</span>
-          <span class='radius label'>ASP.NET</span>
-          <span class='radius label'>HTML + CSS</span>
-          <span class='radius label'>Javascript</span>
+          <span class='label'>Visual Basic.NET</span>
+          <span class='label'>ASP.NET</span>
+          <span class='label'>HTML + CSS</span>
+          <span class='label'>Javascript</span>
         </div>
       </dd>
     </dl>
