--- a/about/academic/puc.html
+++ b/about/academic/puc.html
@@ -1,4 +1,4 @@
-<div class='large-11 columns'>
+<div class='columns large-11 academic'>
   <div class='panel text-center'>
     <dl>
       <dt itemprop='alumniOf'>PUC Campinas</dt>
@@ -29,11 +29,11 @@
         </div>
         <hr>
         <div class="text-center">
-          <span class='radius label'>HTML + CSS</span>
-          <span class='radius label'>Symphony 1.4</span>
-          <span class='radius label'>PHP</span>
-          <span class='radius label'>MySQL</span>
-          <span class='radius label'>SVN</span>
+          <span class='label'>HTML + CSS</span>
+          <span class='label'>Symphony 1.4</span>
+          <span class='label'>PHP</span>
+          <span class='label'>MySQL</span>
+          <span class='label'>SVN</span>
         </div>
       </dd>
     </dl>
