--- a/about/xp.html
+++ b/about/xp.html
@@ -4,20 +4,20 @@
 </h2>
 <div class='row'>
   <div class='large-1 columns timeline first-year hide-for-print'>
-    <span class='radius label'>2014</span>
+    <span class='label'>2014</span>
   </div>
   {% include_relative about/xp/everywhere.html %}
 </div>
 <div class='row'>
   <div class='large-1 columns timeline second-year hide-for-print'>
-    <span class='radius label'>2013</span>
+    <span class='label'>2013</span>
   </div>
   {% include_relative about/xp/pinuts.html %}
   {% include_relative about/xp/medic.html %}
 </div>
 <div class='row'>
   <div class='large-1 columns timeline third-year hide-for-print'>
-    <span class='radius label'>2012</span>
+    <span class='label'>2012</span>
   </div>
   {% include_relative about/xp/fecamp.html %}
 </div>
