--- a/about/xp/everywhere.html
+++ b/about/xp/everywhere.html
@@ -1,4 +1,4 @@
-<div class='columns large-11'>
+<div class='columns large-11 xp'>
   <div class='panel'>
     <dl>
       <dt>
@@ -12,15 +12,15 @@
         Desenvolvimento de aplicativos móveis com HTML5 e JS, desenvolvimento de aplicações web e APIs.
         <hr>
         <div class="text-center">
-          <span class='radius label'>Cordova (PhoneGap)</span>
-          <span class='radius label'>Angular JS</span>
-          <span class='radius label'>PHP</span>
-          <span class='radius label'>Slim Framework</span>
-          <span class='radius label'>PHP Unit</span>
-          <span class='radius label'>Ruby</span>
-          <span class='radius label'>Rails</span>
-          <span class='radius label'>Rspec</span>
-          <span class='radius label'>Cucumber</span>
+          <span class='label'>Cordova (PhoneGap)</span>
+          <span class='label'>Angular JS</span>
+          <span class='label'>PHP</span>
+          <span class='label'>Slim Framework</span>
+          <span class='label'>PHP Unit</span>
+          <span class='label'>Ruby</span>
+          <span class='label'>Rails</span>
+          <span class='label'>Rspec</span>
+          <span class='label'>Cucumber</span>
         </div>
       </dd>
     </dl>
