--- a/about/xp/fecamp.html
+++ b/about/xp/fecamp.html
@@ -1,4 +1,4 @@
-<div class='large-11 columns'>
+<div class='columns large-11 xp'>
   <div class='panel'>
     <dl>
       <dt>
@@ -17,15 +17,15 @@
         da nova base de cálculo de ITBI da Prefeitura de Campinas.
         <hr>
         <div class="text-center">
-          <span class='radius label'>Git</span>
-          <span class='radius label'>PHP</span>
-          <span class='radius label'>MySQL</span>
-          <span class='radius label'>Symfony 1.4</span>
-          <span class='radius label'>Javascript</span>
-          <span class='radius label'>jQuery</span>
-          <span class='radius label'>Google Maps API</span>
-          <span class='radius label'>Google Visualization API</span>
-          <span class='radius label'>HTML + CSS</span>
+          <span class='label'>Git</span>
+          <span class='label'>PHP</span>
+          <span class='label'>MySQL</span>
+          <span class='label'>Symfony 1.4</span>
+          <span class='label'>Javascript</span>
+          <span class='label'>jQuery</span>
+          <span class='label'>Google Maps API</span>
+          <span class='label'>Google Visualization API</span>
+          <span class='label'>HTML + CSS</span>
         </div>
       </dd>
     </dl>
