--- a/about/xp/medic.html
+++ b/about/xp/medic.html
@@ -1,4 +1,4 @@
-<div class='large-5 columns'>
+<div class='columns large-5 xp'>
   <div class='panel'>
     <dl>
       <dt>
@@ -12,16 +12,16 @@
         Análise e desenvolvimento de plataforma para agendamento de consultas online.
         <hr>
         <div class="text-center">
-          <span class='radius label'>Git</span>
-          <span class='radius label'>Ruby</span>
-          <span class='radius label'>Rails 3.2</span>
-          <span class='radius label'>PostgreSQL</span>
-          <span class='radius label'>Heroku</span>
-          <span class='radius label'>AWS</span>
-          <span class='radius label'>Javascript</span>
-          <span class='radius label'>jQuery</span>
-          <span class='radius label'>Google Maps API</span>
-          <span class='radius label'>HTML + CSS</span>
+          <span class='label'>Git</span>
+          <span class='label'>Ruby</span>
+          <span class='label'>Rails 3.2</span>
+          <span class='label'>PostgreSQL</span>
+          <span class='label'>Heroku</span>
+          <span class='label'>AWS</span>
+          <span class='label'>Javascript</span>
+          <span class='label'>jQuery</span>
+          <span class='label'>Google Maps API</span>
+          <span class='label'>HTML + CSS</span>
         </div>
       </dd>
     </dl>
