--- a/about/xp/pinuts.html
+++ b/about/xp/pinuts.html
@@ -1,4 +1,4 @@
-<div class='columns large-6'>
+<div class='columns large-6 xp'>
   <div class='panel'>
     <dl>
       <dt>
@@ -12,23 +12,23 @@
         Desenvolvimento de aplicações para plataformas iOS e Android, desenvolvimento de RESTful web APIs.
         <hr>
         <div class="text-center">
-          <span class='radius label'>Git</span>
-          <span class='radius label'>Ruby</span>
-          <span class='radius label'>Rails</span>
-          <span class='radius label'>Sinatra</span>
-          <span class='radius label'>Grape</span>
-          <span class='radius label'>Rspec</span>
-          <span class='radius label'>Cucumber</span>
-          <span class='radius label'>PostgreSQL</span>
-          <span class='radius label'>Objective-C</span>
-          <span class='radius label'>iOS</span>
-          <span class='radius label'>Cocoapods</span>
-          <span class='radius label'>Kiwi</span>
-          <span class='radius label'>Java</span>
-          <span class='radius label'>Android</span>
-          <span class='radius label'>BDD</span>
-          <span class='radius label'>TDD</span>
-          <span class='radius label'>Pair programming</span>
+          <span class='label'>Git</span>
+          <span class='label'>Ruby</span>
+          <span class='label'>Rails</span>
+          <span class='label'>Sinatra</span>
+          <span class='label'>Grape</span>
+          <span class='label'>Rspec</span>
+          <span class='label'>Cucumber</span>
+          <span class='label'>PostgreSQL</span>
+          <span class='label'>Objective-C</span>
+          <span class='label'>iOS</span>
+          <span class='label'>Cocoapods</span>
+          <span class='label'>Kiwi</span>
+          <span class='label'>Java</span>
+          <span class='label'>Android</span>
+          <span class='label'>BDD</span>
+          <span class='label'>TDD</span>
+          <span class='label'>Pair programming</span>
         </div>
       </dd>
     </dl>
