--- a/about/academic.html
+++ b/about/academic.html
@@ -4,13 +4,13 @@
 </h2>
 <div class='row'>
   <div class='large-1 columns timeline fourth-year hide-for-print'>
-    <span class='radius label'>2011</span>
+    <span class='label'>2011</span>
   </div>
   {% include_relative about/academic/puc.html %}
 </div>
 <div class='row'>
   <div class='large-1 columns timeline fifth-year hide-for-print'>
-    <span class='radius label'>2009</span>
+    <span class='label'>2009</span>
   </div>
   {% include_relative about/academic/people.html %}
 </div>
