Fixes code highlight syntax

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: Felipe Vieira
 ---
 
 {% include_relative about/who.html %}
-<div class='row'>
+<div class='row about'>
   <div class='column small-12 medium-8'>
     {% include_relative about/xp.html %}
     <hr />
