Fixes printed version of about

--- a/about/academic/puc.html
+++ b/about/academic/puc.html
@@ -16,7 +16,7 @@
           <br>
           Software para Gestao de Transporte de Passageiro
         </p>
-        <div class='hide-for-print'>
+        <div>
           <a href='http://graviola-project.gopagoda.com/'>
             <image src='assets/images/nojam.png'>
           </a>
@@ -27,7 +27,6 @@
           <strong>password:</strong>
           admin
         </div>
-        <hr>
         <div class="text-center">
           <span class='label'>HTML + CSS</span>
           <span class='label'>Symphony 1.4</span>
