--- a/about/who.html
+++ b/about/who.html
@@ -29,13 +29,13 @@
         </a>
       </dd>
       <dd>
-        <a href='http://github.com/nvieirafelipe'>
+        <a href='http://github.com/nvieirafelipe' target="_blank">
           <i class='fi-social-github bigger'></i>
           github.com/nvieirafelipe
         </a>
       </dd>
       <dd>
-        <a href='http://twitter.com/nvieirafelipe'>
+        <a href='http://twitter.com/nvieirafelipe' target="_blank">
           <i class='fi-social-twitter bigger'></i>
           twitter.com/nvieirafelipe
         </a>
