--- a/about/xp-item.html
+++ b/about/xp-item.html
@@ -2,7 +2,7 @@
   <div class='panel'>
     <dl>
       <dt>
-        <a href='{{ include.xp.href }}'>{{ include.params.name }}</a>
+        <a href='{{ include.params.href }}'>{{ include.params.name }}</a>
       </dt>
       <dd>
         <strong itemprop='jobTitle'>{{ include.params.job_title }}</strong>
