--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Felipe Vieira
 ---
 
-{% include menu.html %}
+{% include_relative _layouts/menu.html %}
 <div class="row small-up-1 medium-up-2 large-up-3 home">
   <ol class="posts">
     {% for post in site.posts %}
