--- a/index/post.html
+++ b/index/post.html
@@ -12,7 +12,7 @@
     <p>{{ post.preview }}</p>
     <hr />
     {% for category in post.categories %}
-      <span class="label yellow">{{ category }}</span>
+      <span class="label">{{ category }}</span>
     {% endfor %}
   </article>
 </li>
