--- a/about/xp-item.html
+++ b/about/xp-item.html
@@ -1,4 +1,4 @@
-<div class='columns {{ include.class_names }} xp'>
+<div class='columns {{ include.params.class_names }} xp'>
   <div class='panel'>
     <dl>
       <dt>
