--- a/about/academic/people.html
+++ b/about/academic/people.html
@@ -1,14 +1,14 @@
 <div class='columns large-11 academic'>
-  <div class='panel text-center'>
+  <div class='panel'>
     <dl>
-      <dt itemprop='alumniOf'>People</dt>
+      <dt itemprop='alumniOf'>
+        <a href="http://www.people.com.br/">People</a>
+      </dt>
       <dd>
         <p>
-          Técnico em Informática
+          <strong>Técnico em Informática</strong>
           <br>
-          4 Semestres
-          <br>
-          03/2007 à 03/2009
+          03/2007 a 03/2009
           <br>
         </p>
         <div class="text-center">
