--- a/about/academic/puc.html
+++ b/about/academic/puc.html
@@ -1,14 +1,14 @@
 <div class='columns large-11 academic'>
-  <div class='panel text-center'>
+  <div class='panel'>
     <dl>
-      <dt itemprop='alumniOf'>PUC Campinas</dt>
+      <dt itemprop='alumniOf'>
+        <a href="https://www.puc-campinas.edu.br/">PUC Campinas</a>
+      </dt>
       <dd>
         <p>
-          Sistemas de Informação (Análise de Sistemas)
+          <strong>Sistemas de Informação (Análise de Sistemas)</strong>
           <br>
-          8 Semestres
-          <br>
-          01/2008 à 12/2011
+          01/2008 a 12/2011
           <br>
         </p>
         <p>
@@ -16,16 +16,8 @@
           <br>
           Software para Gestao de Transporte de Passageiro
         </p>
-        <div>
-          <a href='http://graviola-project.gopagoda.com/'>
-            <image src='assets/images/nojam.png'>
-          </a>
-          <br>
-          <strong>username:</strong>
-          site_admin
-          <br>
-          <strong>password:</strong>
-          admin
+        <div class="text-center">
+          <image src='assets/images/nojam.png'>
         </div>
         <div class="text-center">
           <span class='label'>HTML + CSS</span>
