--- a/about/academic.html
+++ b/about/academic.html
@@ -3,9 +3,10 @@
   Formação Acadêmica
 </h2>
 <div class='row'>
-  <div class='large-1 columns timeline fourth-year hide-for-print'>
+  <div class='large-1 columns timeline hide-for-print'>
     <span class='label'>2011</span>
   </div>
+
   {% include_relative about/academic/puc.html %}
 </div>
 <div class='row'>
