Timeline layout updates

--- a/about/academic.html
+++ b/about/academic.html
@@ -3,15 +3,12 @@
   Formação Acadêmica
 </h2>
 <div class='row'>
-  <div class='large-1 columns timeline hide-for-print'>
-    <span class='label'>2011</span>
-  </div>
+  <span class='label hide-for-print'>2011</span>
 
   {% include_relative about/academic/puc.html %}
 </div>
 <div class='row'>
-  <div class='large-1 columns timeline fifth-year hide-for-print'>
-    <span class='label'>2009</span>
-  </div>
+  <span class='label hide-for-print'>2009</span>
+
   {% include_relative about/academic/people.html %}
 </div>
