--- a/about/academic/puc.html
+++ b/about/academic/puc.html
@@ -1,4 +1,4 @@
-<div class='columns large-11 academic'>
+<div class='columns medium-11 academic'>
   <div class='panel'>
     <dl>
       <dt itemprop='alumniOf'>
