--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@ title: Felipe Vieira
 
 {% include_relative about/who.html %}
 <div class='row about'>
-  <div class='column small-12 medium-8'>
+  <div class='column small-12 medium-8 timeline'>
     {% include_relative about/xp.html %}
     <hr />
     {% include_relative about/academic.html %}
   </div>
-  <div class='column small-12 medium-4 hide-for-print'>
-    <h2 class='bigger'>Linguagens</h2>
-    <canvas class='chart' id='language-chart'></canvas>
-  </div>
-  <div class='column small-12 medium-4 hide-for-print'>
-    <h2 class='bigger'>Frameworks</h2>
-    <canvas class='chart' id='frameworks-chart'></canvas>
-  </div>
-  <div class='cloumn small-12 medium-4 columns'>
-    <h2 class='bigger'>Idiomas</h2>
-    <p>Inglês intermediário.</p>
+  <div stick class='column small-12 medium-4 hide-for-print'>
+    <div class='row columns'>
+      <h2 class='bigger'>Linguagens</h2>
+      <canvas class='chart' id='language-chart'></canvas>
+    </div>
+    <div class='row columns'>
+      <h2 class='bigger'>Frameworks</h2>
+      <canvas class='chart' id='frameworks-chart'></canvas>
+    </div>
+    <div class='row columns'>
+      <h2 class='bigger'>Idiomas</h2>
+      <p>Inglês intermediário.</p>
+    </div>
   </div>
 </div>
