--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Felipe Vieira
     <hr />
     {% include_relative about/academic.html %}
   </div>
-  <div stick class='column small-12 medium-4 hide-for-print'>
+  <div sticky class='column small-12 medium-4 hide-for-print'>
     <div class='row columns'>
       <h2 class='bigger'>Linguagens</h2>
       <canvas class='chart' id='language-chart'></canvas>
