--- a/about/academic/people.html
+++ b/about/academic/people.html
@@ -1,8 +1,10 @@
-<div class='columns medium-11 academic'>
-  <div class='panel'>
+<div class="columns medium-11 academic">
+  <div class="panel">
     <dl>
-      <dt itemprop='alumniOf'>
-        <a href="http://www.people.com.br/">People</a>
+      <dt itemprop="alumniOf" itemscope itemtype="http://schema.org/CollegeOrUniversity">
+        <a href="http://www.people.com.br/" itemprop="name">
+          People
+        </a>
       </dt>
       <dd>
         <p>
@@ -12,13 +14,12 @@
           <br>
         </p>
         <div class="text-center">
-          <span class='label'>Visual Basic.NET</span>
-          <span class='label'>ASP.NET</span>
-          <span class='label'>HTML + CSS</span>
-          <span class='label'>Javascript</span>
+          <span class="label">Visual Basic.NET</span>
+          <span class="label">ASP.NET</span>
+          <span class="label">HTML + CSS</span>
+          <span class="label">Javascript</span>
         </div>
       </dd>
     </dl>
   </div>
 </div>
-
