--- a/about/academic/puc.html
+++ b/about/academic/puc.html
@@ -1,8 +1,10 @@
-<div class='columns medium-11 academic'>
-  <div class='panel'>
+<div class="columns medium-11 academic">
+  <div class="panel">
     <dl>
-      <dt itemprop='alumniOf'>
-        <a href="https://www.puc-campinas.edu.br/">PUC Campinas</a>
+      <dt itemprop="alumniOf" itemscope itemtype="http://schema.org/CollegeOrUniversity">
+        <a href="https://www.puc-campinas.edu.br/" itemprop="name">
+          PUC Campinas
+        </a>
       </dt>
       <dd>
         <p>
@@ -17,14 +19,14 @@
           Software para Gestao de Transporte de Passageiro
         </p>
         <div class="text-center">
-          <image src='assets/images/nojam.png'>
+          <image src="assets/images/nojam.png">
         </div>
         <div class="text-center">
-          <span class='label'>HTML + CSS</span>
-          <span class='label'>Symphony 1.4</span>
-          <span class='label'>PHP</span>
-          <span class='label'>MySQL</span>
-          <span class='label'>SVN</span>
+          <span class="label">HTML + CSS</span>
+          <span class="label">Symphony 1.4</span>
+          <span class="label">PHP</span>
+          <span class="label">MySQL</span>
+          <span class="label">SVN</span>
         </div>
       </dd>
     </dl>
