--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Felipe Vieira
 ---
 
 {% include_relative about/who.html %}
-<div class='row about'>
+<div class='row about' itemscope itemtype='http://schema.org/Person'>
   <div class='column small-12 medium-8 timeline'>
     {% include_relative about/xp.html %}
     <hr />
