--- a/about/who.html
+++ b/about/who.html
@@ -1,4 +1,4 @@
-<div class='row who'>
+<div class='row who' itemscope itemtype='http://schema.org/Person'>
   <div class='columns small-12 large-6 developer'>
     <h1 class='bigger' itemprop='name'>Felipe Vieira</h1>
     <h3 class='big'>
@@ -17,7 +17,7 @@
         </a>
       </dd>
       <dd>
-        <a href='facetime:nvieirafelipe@gmail.com'>
+        <a href='facetime:nvieirafelipe@gmail.com' itemprop='email'>
           <i class='fi-social-apple bigger'></i>
           nvieirafelipe@me.com
         </a>
@@ -29,13 +29,13 @@
         </a>
       </dd>
       <dd>
-        <a href='http://github.com/nvieirafelipe' target="_blank">
+        <a href='http://github.com/nvieirafelipe' target="_blank" itemprop='url'>
           <i class='fi-social-github bigger'></i>
           github.com/nvieirafelipe
         </a>
       </dd>
       <dd>
-        <a href='http://twitter.com/nvieirafelipe' target="_blank">
+        <a href='http://twitter.com/nvieirafelipe' target="_blank" itemprop='url'>
           <i class='fi-social-twitter bigger'></i>
           twitter.com/nvieirafelipe
         </a>
