--- a/about/academic/people.html
+++ b/about/academic/people.html
@@ -2,16 +2,16 @@
   <div class="panel">
     <dl>
       <dt itemprop="alumniOf" itemscope itemtype="http://schema.org/CollegeOrUniversity">
-        <a href="http://www.people.com.br/" itemprop="name">
-          People
+        <a href="http://www.people.com.br/" itemprop="sameAs">
+          <span itemprop="name">People</span>
         </a>
       </dt>
       <dd>
         <p>
           <strong>Técnico em Informática</strong>
-          <br>
+          <br/>
           03/2007 a 03/2009
-          <br>
+          <br/>
         </p>
         <div class="text-center">
           <span class="label">Visual Basic.NET</span>
