--- a/about/academic/puc.html
+++ b/about/academic/puc.html
@@ -2,24 +2,24 @@
   <div class="panel">
     <dl>
       <dt itemprop="alumniOf" itemscope itemtype="http://schema.org/CollegeOrUniversity">
-        <a href="https://www.puc-campinas.edu.br/" itemprop="name">
-          PUC Campinas
+        <a href="https://www.puc-campinas.edu.br/" itemprop="sameAs">
+          <span itemprop="name">PUC Campinas</span>
         </a>
       </dt>
       <dd>
         <p>
           <strong>Sistemas de Informação (Análise de Sistemas)</strong>
-          <br>
+          <br/>
           01/2008 a 12/2011
-          <br>
+          <br/>
         </p>
         <p>
           <strong>Projeto Final:</strong>
-          <br>
+          <br/>
           Software para Gestao de Transporte de Passageiro
         </p>
         <div class="text-center">
-          <image src="assets/images/nojam.png">
+          <img src="assets/images/nojam.png"/>
         </div>
         <div class="text-center">
           <span class="label">HTML + CSS</span>
