Remove logo from print

--- a/about/academic/puc.html
+++ b/about/academic/puc.html
@@ -19,7 +19,7 @@
           Software para Gestao de Transporte de Passageiro
         </p>
         <div class="text-center">
-          <img src="assets/images/nojam.png"/>
+          <img src="assets/images/nojam.png" class="hide-for-print"/>
         </div>
         <div class="text-center">
           <span class="label">HTML + CSS</span>
