--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Felipe Vieira
     </div>
     <div class='row columns'>
       <h2 class='bigger'>Frameworks</h2>
-      <canvas class='chart' id='frameworks-chart'></canvas>
+      <canvas class='chart' id='framework-chart'></canvas>
     </div>
     <div class='row columns'>
       <h2 class='bigger'>Idiomas</h2>
